api/AltV.Net/Native/AltV.Vehicle.cs

using System;
using System.Runtime.InteropServices;
using System.Security;
using AltV.Net.Data;
using AltV.Net.Elements.Args;

namespace AltV.Net.Native
{
    internal static partial class AltNative
    {
        [SuppressUnmanagedCodeSecurity]
        internal static class Vehicle
        {
            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern ushort Vehicle_GetID(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern IntPtr Vehicle_GetNetworkOwner(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern uint Vehicle_GetModel(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_GetPosition(IntPtr vehicle, ref Position position);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetPosition(IntPtr vehicle, Position pos);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_GetRotation(IntPtr vehicle, ref Rotation rotation);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetRotation(IntPtr vehicle, Rotation rot);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern int Vehicle_GetDimension(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetDimension(IntPtr vehicle, int dimension);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern IntPtr Vehicle_GetMetaData(IntPtr vehicle, IntPtr key);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetMetaData(IntPtr vehicle, IntPtr key, IntPtr val);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern IntPtr Vehicle_GetSyncedMetaData(IntPtr vehicle, IntPtr key);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetSyncedMetaData(IntPtr vehicle, IntPtr key, IntPtr val);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern IntPtr Vehicle_GetDriver(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetMod(IntPtr vehicle, byte category);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetModsCount(IntPtr vehicle, byte category);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_SetMod(IntPtr vehicle, byte category, byte id);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetModKitsCount(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetModKit(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_SetModKit(IntPtr vehicle, byte id);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsPrimaryColorRGB(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetPrimaryColor(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_GetPrimaryColorRGB(IntPtr vehicle, ref Rgba primaryColor);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetPrimaryColor(IntPtr vehicle, byte color);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetPrimaryColorRGB(IntPtr vehicle, Rgba color);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsSecondaryColorRGB(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetSecondaryColor(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_GetSecondaryColorRGB(IntPtr vehicle, ref Rgba secondaryColor);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetSecondaryColor(IntPtr vehicle, byte color);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetSecondaryColorRGB(IntPtr vehicle, Rgba color);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetPearlColor(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetPearlColor(IntPtr vehicle, byte color);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetWheelColor(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetWheelColor(IntPtr vehicle, byte color);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetInteriorColor(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetInteriorColor(IntPtr vehicle, byte color);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetDashboardColor(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetDashboardColor(IntPtr vehicle, byte color);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsTireSmokeColorCustom(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_GetTireSmokeColor(IntPtr vehicle, ref Rgba tireSmokeColor);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetTireSmokeColor(IntPtr vehicle, Rgba color);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetWheelType(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetWheelVariation(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetWheels(IntPtr vehicle, byte type, byte variation);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_GetCustomTires(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetCustomTires(IntPtr vehicle, bool state);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetSpecialDarkness(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetSpecialDarkness(IntPtr vehicle, byte value);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern uint Vehicle_GetNumberplateIndex(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetNumberplateIndex(IntPtr vehicle, uint index);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_GetNumberplateText(IntPtr vehicle, ref IntPtr text);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetNumberplateText(IntPtr vehicle, IntPtr text);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetWindowTint(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetWindowTint(IntPtr vehicle, byte tint);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetDirtLevel(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetDirtLevel(IntPtr vehicle, byte level);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsExtraOn(IntPtr vehicle, byte extraID);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_ToggleExtra(IntPtr vehicle, byte extraID, bool state);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern bool Vehicle_IsNeonActive(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_GetNeonActive(IntPtr vehicle, ref bool left, ref bool right,
                ref bool front, ref bool back);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetNeonActive(IntPtr vehicle, bool left, bool right, bool front,
                bool back);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_GetNeonColor(IntPtr vehicle, ref Rgba neonColor);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetNeonColor(IntPtr vehicle, Rgba color);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetLivery(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetLivery(IntPtr vehicle, byte livery);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern byte Vehicle_GetRoofLivery(IntPtr vehicle);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_SetRoofLivery(IntPtr vehicle, byte roofLivery);

            [DllImport(DllName, CallingConvention = NativeCallingConvention)]
            internal static extern void Vehicle_GetAppearanceDataBase64(IntPtr vehicle, ref IntPtr base64);
